--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,6 @@
        <artifactId>selenium-java</artifactId>
        <version>3.5.3</version>
     </dependency>
-    <dependency>
-       <groupId>org.apache.maven.plugins</groupId>
-       <artifactId>maven-surefire-plugin</artifactId>
-       <version>2.20.1</version>
-</dependency>
   </dependencies>
       <build>
     	<plugins>
@@ -44,6 +39,11 @@
         		</configuration>
     		</plugin>
 
+    		<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-surefire-plugin</artifactId>
+    			<version>2.20.1</version>
+    		</plugin>
     	</plugins>
     </build>
   
